<resources>
    <string name="app_name">London Pollution</string>
    <string name="action_settings">Settings</string>
    <string name="borough">Borough</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="google_app_id">YOUR API KEY HERE</string>
    <string name="tab1_name">NEAR YOU</string>
    <string name="tab2_name">STATISTICS</string>
    <string name="tab3_name">REAL-TIME</string>
    <string name="loc_perm_title">Location permission</string>
    <string name="loc_perm_msg">Please allow this permission as it is necessary to provide you with
        the closest pollution information to your location.</string>
    <string name="ok_btn">Ok</string>
    <string name="exit_btn">Exit</string>
    <string name="your_loc">Your location: %1$s</string>
    <string name="device_loc">Device latest location: %1$s</string>
    <string name="low_pollution">LOW</string>
    <string name="medium_pollution">MODERATE</string>
    <string name="high_pollution">HIGH</string>
    <string name="collected_at">Collected at: %1$s</string>
    <string name="getting_loc_msg">Please wait, getting your&#8230;</string>
    <string name="closest_loc">Closest location: %1$s</string>
    <string name="no_data">No data available at this time.</string>
    <string name="stat_first_graph">Borough statistics (average)</string>
    <string name="select_borough">Select borough:</string>
    <string name="stat_second_graph">Monthly comparison (average)</string>
    <string name="select_month">Select month:</string>
    <string name="heat_map_name">Pollution heat map</string>
    <string name="daily_comp">Daily comparison</string>
    <string name="compare_str">Compare</string>
    <string name="first_date">Select first date:</string>
    <string name="second_date">Select second date:</string>
    <string name="CO">CO</string>
    <string name="CH4">CH4</string>
    <string name="LPG">LPG</string>
    <string name="unknown">UNKNOWN</string>
    <string name="getting_location">Getting location&#8230;</string>
    <string name="understand_the_risks">Understand the risks</string>
    <string name="green_notif">Green notification indciates that the result level is low in the given area. There is no risk of spending time in the area.</string>
    <string name="yellow_notif">Yellow notification indicates that the result is at moderate level in the given area. People shouldn\'t be spending a lot of their time in the area.</string>
    <string name="red_notif">Red notification indicates that the result level is high in the given area. People should avoid this area and consider spending their time elsewhere, especially those with respiratory diseases such as asthma.</string>
    <string name="real_time_air_pollution_data">REAL-TIME AIR POLLUTION DATA</string>
    <string name="getting_data">Getting data&#8230;</string>
    <string name="refresh">Refresh</string>


    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>

    <string-array name="borough">

        <item>Camden</item>
        <item>Hackney</item>
        <item>Haringey</item>
        <item>Islington</item>
        <item>Westminster</item>
    </string-array>

    <string-array name="year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>


    <string-array name="day_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>


</resources>
