<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jadkowski.dawid.pollutionapp.fragments.NearInfoFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="-20dp"
        android:layout_marginStart="-20dp"
        android:background="#262525"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_weight="0.72"
                android:text="@string/tab1_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/infoCard"
                android:layout_width="fill_parent"
                android:layout_height="295dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                cardview:cardBackgroundColor="#c7c7c7"
                cardview:cardCornerRadius="6dp"
                cardview:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="265dp"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="1">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp">

                        <ImageView
                            android:id="@+id/infoImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:background="@drawable/unknown" />

                        <TextView
                            android:id="@+id/infoText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#ffffff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/mainLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-17dp">

                    </FrameLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/yourLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.72"
                    android:text="@string/getting_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/collectedLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.72"
                    android:text="@string/getting_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="405dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                cardview:cardCornerRadius="6dp"
                cardview:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="6dp"
                        android:singleLine="false"
                        android:text="@string/understand_the_risks"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#333333" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@+id/imgOk"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/imgOk"
                        android:text="@string/green_notif"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_alignTop="@+id/imgWarning"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/yellow_notif" />

                    <ImageView
                        android:id="@+id/imgOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView2"
                        android:layout_below="@+id/textView2"
                        android:layout_gravity="start|top"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/ok" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_alignTop="@+id/imgBad"
                        android:layout_gravity="start|bottom"
                        android:layout_marginTop="8dp"
                        android:text="@string/red_notif"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/imgBad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/imgWarning"
                        android:layout_marginBottom="49dp"
                        android:background="@drawable/bad2" />

                    <ImageView
                        android:id="@+id/imgWarning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/imgOk"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start|center_vertical"
                        android:background="@drawable/warning" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>